fix(chat): chat_template_kwargs can no longer bypass the control-token scrub
Kwargs were merged after the engine's bindings and unscrubbed, so a request
could replace 'messages' with raw text or have any printed kwarg tokenize
to a control id. They now go in first and scrubbed like every other
request string; the engine's bindings are put last and win by construction.
Request keeps null kwarg values as Jinja None instead of NPEing.